<resources>
    <string name="app_name" translatable="false">ProCare</string>

    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">X</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button" translatable="false">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>
    <string name="reg_strate"><u>Regístrate</u></string>
    <string name="edit_something"><u>Editar</u></string>
    <string name="delete_something"><u>Borrar</u></string>
    <string name="add_pet"><u>Añadir mascota</u></string>

    <string-array name="Pets_animals">
        <item>Perro</item>
        <item>Gato</item>
        <item>Pajaro</item>
        <item>Pez</item>
        <item>Tortuga</item>
        <item>Caballo</item>
        <item>Otro</item>
    </string-array>

    <string name="edit_pet"><u>Animal modificado</u></string>
    <string name="del_pet"><u>Animal borrado</u></string>
    <string name="log_please"><u>Logeate para mostrar tus mascotas</u></string>
    <string name="fill_please"><u>Rellene todos los campos</u></string>
    <string name="save_pet"><u>Animal guardado</u></string>
    <string name="error_save_pet"><u>Error al guardar animal</u></string>
    <string name="error_del_pet"><u>Error al borrar animal</u></string>
    <string name="error_edit_pet"><u>Error al editar animal</u></string>
    <string name="remove_pet_dialog">¿Estás seguro que quieres eliminar esta mascota?</string>

    <string name="toast_task_saved">Tarea guardada.</string>
    <string name="toast_task_removed">Tarea eliminada correctamente.</string>
    <string name="toast_task_edited">Tarea modificada correctamente.</string>
    <string name="toast_fill_fields">Por favor, rellene todos los campos.</string>
    <string name="toast_error">Ha habido un error.</string>

    <string name="tasks_today_header">Hoy</string>
    <string name="tasks_tomorrow_header">Mañana</string>
    <string name="tasks_soon_header">Proximamente</string>

    <string name="done_task_button">Hecha</string>
    <string name="undone_task_button">No hecha</string>
    <string name="edit_task_button">Modificar</string>
    <string name="remove_task_button">Eliminar</string>
    <string name="new_task_button">Añadir Tarea</string>

    <string name="remove_task_dialog">¿Estás seguro que quieres eliminar esta tarea?</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>

    <string name="toolbar_label_new_task">Nueva Tarea</string>
    <string name="toolbar_label_show_task">Tarea</string>

    <string name="new_task_name_hint">Nombre Tarea</string>
    <string name="new_task_date_hint">Fecha</string>
    <string name="new_task_desc_hint">Descripción (opcional)</string>

    <string name="show_task_pet">Mascota:</string>
    <string name="show_task_name">Tarea:</string>
    <string name="show_task_time">Hora:</string>
    <string name="show_task_date">Fecha:</string>
    <string name="show_task_frequency">Frecuencia:</string>
    <string name="show_task_status">Estado:</string>
    <string name="show_task_desc">Descripción:</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>

    <string name="settings_title">Configuración:</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="show_own_events">Muestra solo eventos propios</string>

    <string name="password_activity_title">Cambiar contraseña</string>
    <string name="old_password_hint">Contraseña antigua</string>
    <string name="new_password_hint">Contraseña nueva</string>
    <string name="repeat_new_password_hint">Repita la nueva contraseña</string>
    <string name="password_confirm_button">Confirmar</string>

    <string name="password_fill_field">Por favor, rellene todos los campos.</string>
    <string name="password_incorrect_password">Contraseña antigua incorrecta.</string>
    <string name="password_no_match">Las dos contraseñas nuevas no coinciden.</string>
    <string name="password_change_successful">Su contraseña se ha cambiado con éxito.</string>

    <array name="task_frequency_array">
        <item>Hoy</item>
        <item>Diario</item>
        <item>Semanal</item>
        <item>Mensual</item>
        <item>Anual</item>
    </array>

    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="seleccionar_idioma">Seleccionar idioma:</string>
    <string name="espanol" translatable="false">Español</string>
    <string name="english" translatable="false">English</string>
    <string name="italiano" translatable="false">Italiano</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="calendar_tasks">Tareas</string>
    <string name="iniciar_sesion_button">Iniciar Sesión</string>
    <string name="aun_no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="modificar_nueva_tarea">Modificar</string>
    <string name="anadir_mascota">Añadir Mascota</string>
    <string name="nombre_mascota">Nombre Mascota</string>
    <string name="aceptar">Aceptar</string>
    <string name="editar_boton">Editar</string>
    <string name="eliminar_boton">Eliminar</string>
    <string name="greetings">Hola,</string>
    <string name="llamar_a_nurgencias">Llamar a &#10;urgencias</string>
    <string name="localizar_ncl_nicas">Localizar &#10;clínicas</string>
    <string name="books_activity_title">Buscar Libros</string>
    <string name="search_books_button">Buscar &#10;Libros</string>
    <string name="book_query_hint">Palabras claves</string>
    <string name="book_search_button">Buscar Libros</string>
    <string name="noPets">No puedes añadir una tarea. Primero crea una mascota.</string>
    <string name="cuidado_de_mascotas">Cuidado de mascotas</string>
    <string name="dale_el_mejor_cuidado_a_tu_mascota_con_nuestros_libros">Dale el mejor cuidado a tu mascota con nuestros libros:</string>
    <string name="user_used" translatable="false">Ese username ya está cogido.</string>
    <string name="not_same_passwords" translatable="false">Las contraseñas no coinciden.</string>
    <string name="fill_all_fields" translatable="false">Por favor, rellene todos los campos.</string>
    <string name="username_password_invalid" translatable="false">Nombre de usuario o contraseña no válidos.</string>
    <string name="fill_field" translatable="false">Por favor, rellene el campo.</string>
    <string name="changed_name" translatable="false">Su nombre se ha cambiado con éxito.</string>
    <string name="show_pets_login" translatable="false">Inicia sesión para mostrar tus mascotas</string>
    <string name="add_event_floating_button" translatable="false">Añadir evento</string>
    <string name="add_event_name" translatable="false">Nombre del evento</string>
    <string name="add_event_description" translatable="false">Descripción del evento (opcional)</string>
    <string name="add_event_button" translatable="false">Añadir</string>
    <string name="add_event_address" translatable="false">Dirección</string>
    <string name="add_event_added_by" translatable="false">Creado por:</string>
    <string name="mapa" translatable="false">Mapa de Eventos</string>
    <string name="no_description" translatable="false">Sin descripción</string>
    <string name="seach_clinics" translatable="false">clínica+veterinaria</string>
</resources>